Написаны модульные тесты для всех сервисов кроме AuthenticationService